--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,20 @@
-{
-  "id": "abcdef01-2345-6789-abcd-ef0123456789",
-  "name": "Custom Logo",
-  "version": "1.0.0",
-  "targetAbi": "10.7.0.0",
-  "description": "Replace the default Jellyfin logo with your own.",
-  "owner": "bvovy",
-  "category": "General",
-  "pluginId": "CustomLogo",
-  "guid": "abcdef01-2345-6789-abcd-ef0123456789",
-  "imageUrl": "https://raw.githubusercontent.com/bvolvy/CustomLogoPlugin/main/static/icon.png",
-  "configurationFileName": "configPage.html"
-}
+[
+  {
+    "guid": "abcdef01-2345-6789-abcd-ef0123456789",
+    "name": "Custom Logo",
+    "description": "Replace the default Jellyfin logo with your own.",
+    "overview": "Allows uploading a custom logo to replace Jellyfin branding.",
+    "owner": "bvoly",
+    "category": "General",
+    "imageUrl": "https://raw.githubusercontent.com/bvolvy/CustomLogoPlugin/main/static/icon.png",
+    "versions": [
+      {
+        "version": "1.0.0",
+        "targetAbi": "10.10.0.0",
+        "sourceUrl": "https://github.com/bvolvy/CustomLogoPlugin/releases/download/v1.0.0/CustomLogoPlugin.zip",
+        "checksum": "your_checksum_here",
+        "timestamp": "2025-04-30T23:00:00Z"
+      }
+    ]
+  }
+]
