--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
       {
         "version": "1.0.0",
         "targetAbi": "10.10.0.0",
-        "sourceUrl": "https://github.com/bvolvy/CustomLogoPlugin/releases/download/v1.0.0/CustomLogoPlugin.zip",
+        "sourceUrl": "https://github.com/bvolvy/CustomLogoPlugin/archive/refs/tags/v1.0.0.zip",
         "checksum": "your_checksum_here",
         "timestamp": "2025-04-30T23:00:00Z"
       }
