--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "name": "Custom Logo",
     "description": "Replace the default Jellyfin logo with your own.",
     "overview": "Allows uploading a custom logo to replace Jellyfin branding.",
-    "owner": "bvoly",
+    "owner": "bvolvy",
     "category": "General",
     "imageUrl": "https://raw.githubusercontent.com/bvolvy/CustomLogoPlugin/main/static/icon.png",
     "versions": [
